overlays/blue/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deploy
spec:
  replicas: 3
  template:
    metadata:
      labels:
        ver: blue
    spec:
      containers:
      - name: demo-web
        ports:
        - containerPort: 8080
          name: main-port
        volumeMounts:
        - name: blue-html
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
      volumes:
        - name: blue-html
          configMap:
            name: index
