overlays/blue/service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: demo-svc
spec:
  selector:
    ver: blue
